# rust-starter

./: .editorconfig  .gitignore  Cargo.example.toml  Cargo.toml  README.md  deny.toml  package.json  pnpm-lock.yaml  rustfmt.toml
.cargo/: config.toml
.github/: codecov.yml  test.yml
.github/workflows/: cache.yml  check.yml  coverage.yml  deny.yml  safety.yml  test.yml
.husky/: post-checkout  post-merge  pre-commit
example/: Cargo.toml
example/src/: main.rs
