## Workspace recommendations:
##
##   1. Do not use wildcard imports
##
## Monorepo Layout:
##
##   bin/     # Releasable binaries
##   crates/  # Internal libraries
##   lib/     # Publishable libraries
##   vendor/  # Third party dependencies
##
##   Example:
##
##     lib/some_library/
##       bench/
##       examples/
##       src/
##       tests/
##       Cargo.toml
##
## Application / Library Layout:
##
##   bench/
##   bin/
##   examples/
##   src/
##   tests/
[workspace]
members = [
    "example"
]
resolver = "2"

[workspace.package]
authors = ["Stephen Ribich <stephen@ribich.dev>"]
edition = "2021"
publish = false
version = "0.0.0"

[workspace.dependencies]
# Testing Dependencies
arbtest = "0.2.0"
arbitrary = { version = "1.2.0", features = ["derive"] }
loom = "0.5.6"
ntest = "0.9.0"

# Logging & Error Management
tracing = "0.1.37"

color-eyre = "0.6.2"
thiserror = "1.0.37"

################################################################################
## Dev Profile
################################################################################
[profile.dev]
# Enable basic optimizations for _our_ code. This additionally fixes some
# issues with LeakSanitizer not detecting memory leaks in unoptimized builds.
opt-level = 1

[profile.dev.package."*"]
# Fully optimize dependencies so that development performance is not bottlenecked
# by external factors.
opt-level = 3

################################################################################
## Release Profile
################################################################################
[profile.release]
# Enable link-time optimization, eliminates more code and inlines across crate boundaries.
lto = "fat"

# codegen-units of 1 gives best optimization, but disables parallel building.
# Default: 16
codegen-units = 4

# The default optimization level is 3 for release mode builds.
# 0 means disable optimization and is the default for debug mode buids.
# (Setting opt-level=1 for debug builds is a good way of speeding them up a bit.)
# "s" means optimize for size, "z" reduces size even more.
opt-level = 3

# Includes debug information in release builds. Necessary for profiling. Does not
# slow down the executable.
debug = true

# https://doc.rust-lang.org/rustc/codegen-options/index.html#strip
strip = "symbols"
