[package]
name = "example"
version.workspace = true
authors.workspace = true
edition.workspace = true

description = ""
repository = ""

keywords = []
categories = []

publish.workspace = true

[features]

[dependencies]

[dev-dependencies]
arbtest = { workspace = true }
arbitrary = { workspace = true }
k9 = { workspace = true }
ntest = { workspace = true }
loom = { workspace = true }

tracing = { workspace = true }
color-eyre = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]

[target.'cfg(loom)'.dependencies]
loom = { workspace = true }
